--- a/app/src/main/res/drawable/bg_mavzu.xml
+++ b/app/src/main/res/drawable/bg_mavzu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape android:shape="rectangle">
-        <gradient android:startColor="#1E99D3" android:endColor="#EC0404"/>
-
-    </shape>
-</item>
+    <item>
+        <shape android:shape="rectangle">
+            <gradient android:centerColor="#FFA000" android:endColor="#4AEC04" android:startColor="#FF0000" />
+            <corners android:bottomRightRadius="40dp" android:topLeftRadius="40dp" />
+        </shape>
+    </item>
 </selector>
