--- a/app/src/main/res/drawable/svetafor_bg.xml
+++ b/app/src/main/res/drawable/svetafor_bg.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <gradient android:endColor="#FFFF" android:startColor="#255FDB" />
+        <shape android:shape="oval">
+            <solid android:color="#FF0000" />
+            <stroke android:width="4dp" android:color="#000" />
         </shape>
     </item>
 </selector>
