--- a/app/src/main/res/layout/activity_on_uchinchi_masala2.xml
+++ b/app/src/main/res/layout/activity_on_uchinchi_masala2.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mavzular.ikkinchiMavzu.masala.OnBirinchiMasala2Activity">
-
+    tools:context=".mavzular.ikkinchiMavzu.masala.OnUchinchiMasala2Activity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Integer11"
+                android:text="Integer13"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:text="@string/matin"
+                android:text="Integer13. Uch xonali son berilgan. Uning chapdan birinchi raqamini o'chirib o'ng tarafiga yozishdan hosil bo'lgan sonni aniqlovchi programma tuzilsin."
                 android:textColor="#000"
                 android:textSize="30dp" />
 
