--- a/app/src/main/res/layout/activity_on_ikkinchi_masala2.xml
+++ b/app/src/main/res/layout/activity_on_ikkinchi_masala2.xml
@@ -59,7 +59,7 @@
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:src="@drawable/img" />
+                    android:src="@drawable/game" />
 
                 <ImageView
                     android:layout_width="200dp"
